/*
 * $Id: ChangeLog,v 1.892 2012-03-23 15:13:23 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-03-23 12:13 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   + lib/.cvsignore
     * To prevent the upload of xHarbour/bcc libraries.

2012-03-23 11:47:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_checklist.prg
     ! Fixed BCC warning.

2012-03-22 13:25:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * doc/classes.txt
     * Updated.
   * include/oohg.ch
     + Added i_checklist.ch to list of included files.
   * include/i_altsyntax.ch
     + Added support for DEFINE CHECKBOX command.
   + include/i_checklist.ch
     + Added support for @ ... CHECKBOX command.
   * source/common_make.prg
     + Added h_checklist to prg list.
   + source/h_checklist.prg
     + Added TCheckList class implementing a listbox like control
       with text and checkbox and, optionaly, an image.

2012-03-21 19:05:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
     + Added DATA Type to TGridControl class.
     + Added GETDIALOGBASEUNITS function.
     + Added TGridControlImageData class to edit cells with text
       and image.
     * Changed Item method to add suport for IMAGEDATA editcontrols.
     * Changed GridControlObject function to add suport for IMAGEDATA
       editcontrols.

2012-03-20 19:55:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
     * InsertListViewItem now returns the index assigned to the
       inserted item or 0 if the function failed, instead of NIL.
     * InsertBlank method now returns the index assigned to the
       inserted item or 0 if the function failed, instead of NIL.
     * InsertItem method now controls if InsertBlank was successfull
       and takes into account the index assigned to the inserted